syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.openobserve.cluster";
option java_outer_classname = "filelistProto";

package cluster;

import "cluster/common.proto";

service Filelist {
    rpc MaxID (EmptyRequest) returns (MaxIdResponse) {}
    rpc Query (FileListQueryRequest) returns (FileList) {}
}


message MaxIdResponse {
    int64 max_id = 1;
}

message FileListQueryRequest {
    string      org_id = 1;
    string stream_type = 2;
    string stream_name = 3;
    string  time_level = 4;
    int64   start_time = 5;
    int64     end_time = 6;
}
